# learn-refactoring-by-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml
chapter-01/: README.md  invoices.json
chapter-01/refactor-demo/: Cargo.toml
chapter-01/refactor-demo-01-add-test/: Cargo.toml
chapter-01/refactor-demo-01-add-test/src/: main.rs
chapter-01/refactor-demo-02-decompose-function/: Cargo.toml
chapter-01/refactor-demo-02-decompose-function/src/: main.rs
chapter-01/refactor-demo-03-extract-calculation-for-credits/: Cargo.toml
chapter-01/refactor-demo-03-extract-calculation-for-credits/src/: main.rs
chapter-01/refactor-demo-04-split-loop/: Cargo.toml
chapter-01/refactor-demo-04-split-loop/src/: main.rs
chapter-01/refactor-demo-05-split-calculation-phase-from-formatting-phase/: Cargo.toml
chapter-01/refactor-demo-05-split-calculation-phase-from-formatting-phase/src/: create_statement_data.rs  main.rs
chapter-01/refactor-demo-06-reorganize-calculation-process-by-type/: Cargo.toml
chapter-01/refactor-demo-06-reorganize-calculation-process-by-type/src/: create_statement_data.rs
chapter-01/refactor-demo-07-make-calculator-polymorphic/: Cargo.toml
chapter-01/refactor-demo-07-make-calculator-polymorphic/src/: create_statement_data.rs  main.rs
chapter-01/refactor-demo/src/: main.rs
refactoring-categories/encapsulate-variable/: Cargo.toml  README.md  README_CN.md
refactoring-categories/encapsulate-variable/src/: main.rs  s00_before_encapsulation.rs  s01_after_encapsulation.rs  s01_before_encapsulation.rs  s02_1_find_modify.rs  (+3 more)
